tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/ap-southeast-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-824729fb",
                    "RouteTableId": "rtb-75fe8213"
                }
            ],
            "OwnerId": "111111111111",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-75fe8213",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-59bbb33d",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-3c78905a"
        }
    ]
}
