tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/ap-southeast-1/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "ap-southeast-1a",
            "AvailabilityZoneId": "apse1-az2",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.32.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:ap-southeast-1:111111111111:subnet/subnet-2962af61",
            "SubnetId": "subnet-2962af61",
            "VpcId": "vpc-3c78905a"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "ap-southeast-1b",
            "AvailabilityZoneId": "apse1-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:ap-southeast-1:111111111111:subnet/subnet-fedf0398",
            "SubnetId": "subnet-fedf0398",
            "VpcId": "vpc-3c78905a"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "ap-southeast-1c",
            "AvailabilityZoneId": "apse1-az3",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:ap-southeast-1:111111111111:subnet/subnet-32cd466b",
            "SubnetId": "subnet-32cd466b",
            "VpcId": "vpc-3c78905a"
        }
    ]
}
